# fastapi_todo

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements_full.txt
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.github/: python.instructions.md
alembic/: env.py
alembic/versions/: 2025_09_24_1735-491ae1811805_1st_migration.py
app/: main.py
app/api/v1/: api.py
app/application/interfaces/: user_repository.py
app/application/usecases/: auth_usecases.py  user_usecases.py
app/core/: config.py  dependencies.py  exceptions.py  security.py  timezone.py  timezone_middleware.py
app/db/: session.py
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/domain/value_objects/: created_at.py  deleted_at.py  updated_at.py  uuid.py
app/domain/value_objects/user_value_objects/: email.py  is_active.py  is_superuser.py  password.py  username.py
app/infrastructure/database/models/: __init__.py  todos.py  users.py
app/infrastructure/database/repositories/: user_repository_impl.py
app/infrastructure/database/seeders/: users.py
app/models/: base.py  users.py
app/presentation/api/v1/: __init__.py  api.py
app/presentation/api/v1/endpoints/: auth.py  users.py
app/presentation/schemas/: auth_schemas.py  user_schemas.py
